ARMTemplates/NetAdapter/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "publicIPAddresses_AWX1_ip_name": {
            "defaultValue": "AWX1-ip",
            "type": "String"
        },
        "publicIPAddresses_AWX2_ip_name": {
            "defaultValue": "AWX2-ip",
            "type": "String"
        },
        "virtualNetworks_DCBAWX_vnet_name": {
            "defaultValue": "DCBAWX-vnet",
            "type": "String"
        },
        "networkInterfaces_NetAdapter1_name": {
            "defaultValue": "NetAdapter1",
            "type": "String"
        },
        "networkSecurityGroups_AWX1_nsg_name": {
            "defaultValue": "AWX1-nsg",
            "type": "String"
        },
        "subnets_awx_name": {
            "defaultValue": "awx",
            "type": "String"
        },
        "securityRules_SSH_name": {
            "defaultValue": "SSH",
            "type": "String"
        },
        "networkInterfaces_NetAdapter1_id": {
            "defaultValue": "/subscriptions/11541666-34de-4eaa-84a2-801039426abf/resourceGroups/DCBAWX/providers/Microsoft.Network/virtualNetworks/DCBAWX-vnet/subnets/awx",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/11541666-34de-4eaa-84a2-801039426abf/resourceGroups/TestWithVM/providers/Microsoft.Network/networkInterfaces/NetAdapter1'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_NetAdapter1_name')]",
            "apiVersion": "2018-02-01",
            "location": "eastus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "e6809b25-1c83-4a82-8ffc-c9717b638dfe",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"e45167e6-078d-4e1e-8105-feab7fd5af63\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.100.0.5",
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[parameters('networkInterfaces_NetAdapter1_id')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "rjtztwfivzletkdfkp2op0fdnd.bx.internal.cloudapp.net"
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/11541666-34de-4eaa-84a2-801039426abf/resourceGroups/TestWithVM/providers/Microsoft.Network/networkSecurityGroups/AWX1-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_AWX1_nsg_name')]",
            "apiVersion": "2018-02-01",
            "location": "eastus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "8f2065e1-7198-417a-9f12-c16f61956a8f",
                "securityRules": [
                    {
                        "name": "SSH",
                        "etag": "W/\"3051de6a-a810-4adf-bb74-f2824ecaceec\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"3051de6a-a810-4adf-bb74-f2824ecaceec\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"3051de6a-a810-4adf-bb74-f2824ecaceec\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"3051de6a-a810-4adf-bb74-f2824ecaceec\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"3051de6a-a810-4adf-bb74-f2824ecaceec\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"3051de6a-a810-4adf-bb74-f2824ecaceec\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"3051de6a-a810-4adf-bb74-f2824ecaceec\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/11541666-34de-4eaa-84a2-801039426abf/resourceGroups/TestWithVM/providers/Microsoft.Network/publicIPAddresses/AWX1-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[parameters('publicIPAddresses_AWX1_ip_name')]",
            "apiVersion": "2018-02-01",
            "location": "eastus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "9f521e3b-6ba2-43bf-9029-2161b0cbd61f",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/11541666-34de-4eaa-84a2-801039426abf/resourceGroups/TestWithVM/providers/Microsoft.Network/publicIPAddresses/AWX2-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[parameters('publicIPAddresses_AWX2_ip_name')]",
            "apiVersion": "2018-02-01",
            "location": "eastus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "4fc5ef58-4ac4-4bc5-b791-ce0b038a15a9",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/11541666-34de-4eaa-84a2-801039426abf/resourceGroups/TestWithVM/providers/Microsoft.Network/virtualNetworks/DCBAWX-vnet'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_DCBAWX_vnet_name')]",
            "apiVersion": "2018-02-01",
            "location": "eastus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "24d5f434-446d-4644-ba91-84965d58828c",
                "addressSpace": {
                    "addressPrefixes": [
                        "10.100.0.0/23"
                    ]
                },
                "subnets": [
                    {
                        "name": "awx",
                        "etag": "W/\"91ed04ae-020f-4327-86b5-4d3ce9ef9054\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.100.0.0/26"
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false,
                "enableVmProtection": false
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/11541666-34de-4eaa-84a2-801039426abf/resourceGroups/TestWithVM/providers/Microsoft.Network/networkSecurityGroups/AWX1-nsg/securityRules/SSH'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_AWX1_nsg_name'), '/', parameters('securityRules_SSH_name'))]",
            "apiVersion": "2018-02-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 300,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_AWX1_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/11541666-34de-4eaa-84a2-801039426abf/resourceGroups/TestWithVM/providers/Microsoft.Network/virtualNetworks/DCBAWX-vnet/subnets/awx'.",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworks_DCBAWX_vnet_name'), '/', parameters('subnets_awx_name'))]",
            "apiVersion": "2018-02-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.100.0.0/26"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_DCBAWX_vnet_name'))]"
            ]
        }
    ]
}
